# backend

./: .gitignore  A01_20260501080516.mp424k6zdtw.part  README.md  actionhandler.py  app.py  commons.py  context.py  create-room-tui  main.py  modelhandler.py  pyproject.toml  quicktunnel  requirements.txt  returnablequeue.py  run.sh  test_download_disconnect.py  test_output.txt  test_sequence.py  tmp.txt  tunnel  video_utils.py  whattodo.txt
demo_test_app/: .gitignore  README.md  app.py  requirements.txt
demo_test_app/templates/: index.html  job.html
doc/: API.md  INFERENCE.md  INFERENCE_AND_DOWNLOAD.md  README.md  Specifiaction.md
doc/.obsidian/: workspace.json
doc/examples/: README.md  client.py  requirements.txt  sam_batch_images.py  sam_single_image.py  sam_video.py  yolo_batch_images.py  yolo_single_image.py  yolo_video.py
model_servers/: README.md
model_servers/sam3/: requirements.txt  run.sh  setup.sh
sam/: batch_test.py  remap.py  sam_env.sh  sam_fastapi_server.py  test.py
sam_test_app/: README.md  assemble_video.py  requirements.txt  sam_client.py  server.py  smoke_test.py
samtoyolo_backend/: __init__.py  capabilities.py  cloudflared.py  config.py  connections.py  events.py  executors.py  jsonrpc.py  main.py  model_assets.py  model_server_client.py  model_servers.py  model_sources.py  public_urls.py  records.py  registry.py  run.py  runtime_env.py  storage.py  tasks.py  tunnel.py
samtoyolo_model_servers/: __init__.py
test_front/: app.py  saved_actions.json
website/: .gitignore  README.md  package-lock.json  package.json
(+43 files in other folders)
