[project]
name = "samtoyolo-backend"
version = "1.0.0"
description = "FastAPI backend for SAM-to-YOLO transfer-learning workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "opencv-python-headless>=4.9,<4.13",
  "pydantic>=2.7",
  "numpy>=1.26,<2",
  "websockets>=12",
]

[tool.ruff]
line-length = 96
